# talent-flow-ats

./: .dockerignore  .env.example  .gitignore  BACKUP_SETUP.md  PM2_WINDOWS_SETUP.md  README.md  bpo_tfa_dump.sql  docker-compose.yml  errorlog.md  nginx.conf  pyproject.toml  requirements.txt  test_perf.py
.github/workflows/: ci.yml  google-chat-pr-notify.yml
app/auth/: utils.py
app/users/: schemas.py
backend/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  check_classifications.py  conftest.py  debug_db.py  list_routes.py  requirements.txt  ruff.toml  seed_classifications.py  seed_subjects.py  seed_verdicts.py  verify_fix.py
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/scratch/: test_hf.py  test_hf_sdk.py
backend/scripts/: backup_db.sh  daily_backup.sh  gen_migrations.sh  insert_spread_users.py  restore_db.sh  run_migrations.sh  seed_questions.py  setup_backup_cron.sh  update_question_images.py
backend/seeds/: import_bulk_users.py  india_states_districts.json  seed_classifications.py  seed_contact_details.py  seed_departments.py  seed_lead_generation.py  seed_papers.py  seed_questions.py  seed_special_questions.py  seed_subjects.py  seed_users.py  update_question_images.py
backend/tests/: test_answer.py  test_auth.py  test_questions.py
frontend/: .dockerignore  .env  Dockerfile  README.md  ecosystem.config.js  eslint.config.mjs  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  proxy.ts  start.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  (+3 more)
(+608 files in other folders)
